--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
+body{
+    background-color: #b9936c;
+}
+
 #body{
     margin-left: 20%;
     margin-right: 20%;
+    padding-left: 1%;
+    padding-right: 1%;
+    background-color: #e6e2d3;
+    border: 5px solid #241404;
+    padding-bottom: 20px;
 }
 
-#cornertext{
+#parent{
     position:absolute;
+    background-color: #dac292;
+    border: 2px solid #241404;
+    padding: 5px;
 }
