--- a/style.css
+++ b/style.css
@@ -8,13 +8,14 @@ body{
     padding-left: 1%;
     padding-right: 1%;
     background-color: #e6e2d3;
-    border: 5px solid #241404;
+    border-top: 10px solid #241404;
+    border-bottom: 10px solid #241404;
     padding-bottom: 20px;
     
 }
 
 #sidebar{
-    position:absolute;
+    position: absolute;
     background-color: #dac292;
     border: 2px solid #241404;
     padding: 5px;
